# pl0-lang

./: .gitignore  CMakelists.txt  Makefile  README.md  lexer.cpp  vcpkg.json
docs/: Lexer.md
example/: CMakeLists.txt  array_initializer.cpp  kaleido.cpp  llvm_example.cpp
include/: Untitled-1.cpp  compiler.h  error.h  expr_ast.h  lexer.h  logger.hpp  number_recognizer.h  parser.h  pl0_jit.h  recognizer.h  symbol_recognizer.h  symbol_table.h  token.h  word_recognizer.h
pass/: hello_pass.cpp
resource/: operation.pl0  prime.pl0
script/: view-cfg.sh
snippet/: dowhile  dowhile.cpp
src/: compiler.cpp  error.cpp  expr_ast.cpp  lexer.cpp  parser.cpp  recognizer.cpp  token.cpp
test/: CMakelists.txt  cc_driver.cpp  lexer_test.cpp  parser_test.cpp  testdata.pl0
tools/: CMakeLists.txt  cc.cpp  repl.cpp
